Document how to handle kill/terminate interrupts in Thread.handle_interrupt

The kill/terminate interrupts are internally handled not as Exception
instances, but as integers.  So using Exception doesn't handle these
interrupts, but Object does.  You can use Integer if you only want to
handle kill/terminate interrupts, but that's probably more of an
implementation detail, while handling Object should work regardless
of the implementation.

Fixes [Bug #15735]